# lab2

./: CMakeLists.txt
inc/: Referee.hpp
src/: Referee.cpp  main.cpp
